Updating Google calendar configs and fixing tests.

--- a/cmd/fleetctl/testdata/gitops/team_config_no_paths.yml
+++ b/cmd/fleetctl/testdata/gitops/team_config_no_paths.yml
@@ -17,11 +17,12 @@ team_settings:
     host_expiry_window: 30
   integrations:
     google_calendar:
-      - email: service@example.com
-        enable_calendar_events: true
-        policy_ids: [10, 20]
-        webhook_settings:
-          destination_url: https://example.com/google_calendar_webhook
+      email: service@example.com
+      enable_calendar_events: true
+      policies:
+        - name: policy1
+        - name: policy2
+      webhook_url: https://example.com/google_calendar_webhook
 agent_options:
   command_line_flags:
     distributed_denylist_duration: 0
